--- a/lab_assignment_01.ipynb
+++ b/lab_assignment_01.ipynb
@@ -34,18 +34,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
-        "id": "MtKskTzbCLaU"
+        "id": "MtKskTzbCLaU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a660f28-6102-4d77-b3db-ec6e4babf4a7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'o': 3, 'g': 2, 'l': 1, 'e': 1, '.': 1, 'c': 1, 'm': 1}\n"
+          ]
+        }
+      ],
       "source": [
         "from collections import Counter\n",
         "\n",
         "\n",
         "def returnCount(inputString: str) -> dict:\n",
-        "    return dict(Counter(inputString))\n",
-        "\n",
+        "    return dict(sorted(dict(Counter(inputString)).items(), key=lambda x: x[1], reverse=True))\n",
         "\n",
         "inputString = \"google.com\"\n",
         "print(returnCount(inputString))"
@@ -62,11 +73,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
-        "id": "I57NXsauCec2"
+        "id": "I57NXsauCec2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "acc37dc7-5432-417f-d3f4-27bfe03f3afb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16\n"
+          ]
+        }
+      ],
       "source": [
         "def returnSum(lists: list) -> int:\n",
         "    return sum(lists)\n",
@@ -91,11 +114,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
-        "id": "Fj0XhwbBCw2o"
+        "id": "Fj0XhwbBCw2o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42a9f608-6de4-46df-a8f4-7b1269e9a74b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "resta$t\n"
+          ]
+        }
+      ],
       "source": [
         "from collections import Counter\n",
         "\n",
@@ -137,11 +172,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 74,
       "metadata": {
-        "id": "w79QilHXD3Mg"
+        "id": "w79QilHXD3Mg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "16764cca-4dac-418d-8767-55ee6342a42b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25.12\n"
+          ]
+        }
+      ],
       "source": [
         "def calculation(a: int, b: int) -> str:\n",
         "    output = 3.14 * ((1 + (a / b)) ** 3)\n",
@@ -168,11 +215,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {
-        "id": "_z4aLqAbEET1"
+        "id": "_z4aLqAbEET1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "61b96d0a-4991-4a4c-a38c-9a0bc7561004"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{1: 10, 2: 20, 3: 30, 4: 40, 5: 50, 6: 60}\n"
+          ]
+        }
+      ],
       "source": [
         "dict1 = {1: 10, 2: 20}\n",
         "dict2 = {3: 30, 4: 40}\n",
@@ -195,11 +254,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
-        "id": "7WEmgq-DF2P1"
+        "id": "7WEmgq-DF2P1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "45580fde-aa07-4bdd-b2a5-cc9f387b8e84"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Element does not exists\n"
+          ]
+        }
+      ],
       "source": [
         "def checkExists(inputTuple: tuple, part: int)->str:\n",
         "    if part in inputTuple:\n",
@@ -224,11 +295,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
-        "id": "t0D5kdJUGjjw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t0D5kdJUGjjw",
+        "outputId": "74e9f1c5-daed-4611-c918-f6847e61d35b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12000 1\n"
+          ]
+        }
+      ],
       "source": [
         "inputSet = {12000, 1, 7}\n",
         "print(max(inputSet), min(inputSet))\n"
@@ -248,23 +331,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
-        "id": "3iGbmcOBhTwy"
+        "id": "3iGbmcOBhTwy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "914e4ee3-be80-4d0c-8b14-39a8d2fa95d8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['kg0569', 'nv0234', 'vm0377', 'av0659', 'fh0141', 'ja0964']\n",
+            "['bg0320', 'sa1198', 'sk1386', 'sb1357']\n",
+            "['ak0934', 'sk1390', 'sb1357', 'sm1907']\n",
+            "['ak0934', 'sb1357', 'kg0569', 'fh0141', 'sg1297']\n",
+            "['sa1198', 'jl1252', 'sb1357', 'av0659', 'hy0232']\n",
+            "['sb1357', 'jl1252', 'sm1907', 'sk1386', 'ja0964']\n"
+          ]
+        }
+      ],
       "source": [
         "from random import sample, randint\n",
-        "\n",
-        "def generation(inputList: list, count: int):\n",
-        "    for i in range(count):\n",
-        "        print(sample(inputList, randint(4, 6)))\n",
-        "\n",
         "\n",
         "inputList = ['ja0964', 'sa1198', 'sb1357', 'vb0218', 'sc1229', 'kg0569', 'kg0470', 'sg1297', 'bg0320', 'fh0141',\n",
         "             'jl1252', 'sk1386', 'ak0956', 'sk1390', 'sk1458', 'sk1313', 'ak0934', 'vm0377', 'nm0618', 'sm1640',\n",
         "             'sm1907', 'gn0108', 'pr0353', 'dr0609', 'ms1500', 'aos0040', 'ds0814', 'av0659', 'nv0234', 'hy0232']\n",
         "count = 6\n",
+        "\n",
+        "def generation(inputList: list, count: int):\n",
+        "    for i in range(count):\n",
+        "        print(sample(inputList, randint(4, 6)))\n",
+        "\n",
         "generation(inputList, count)"
       ]
     },
@@ -279,11 +379,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
-        "id": "_Bry6jp0jBCu"
+        "id": "_Bry6jp0jBCu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ae3b9855-8ce6-4be9-df87-49d8081767ff"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10]\n"
+          ]
+        }
+      ],
       "source": [
         "from collections import Counter\n",
         "\n",
@@ -312,11 +424,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
-        "id": "fxNVC-wojBCu"
+        "id": "fxNVC-wojBCu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f8167a4e-1648-4577-d93e-1c9e5c792ee1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "52\n"
+          ]
+        }
+      ],
       "source": [
         "import datetime\n",
         "\n",
