--- a/lab_assignment_01.ipynb
+++ b/lab_assignment_01.ipynb
@@ -34,13 +34,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 28,
       "metadata": {
         "id": "MtKskTzbCLaU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a660f28-6102-4d77-b3db-ec6e4babf4a7"
+        "outputId": "82045574-c8e3-4604-fec7-bbf293630918"
       },
       "outputs": [
         {
@@ -73,13 +73,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 29,
       "metadata": {
         "id": "I57NXsauCec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "acc37dc7-5432-417f-d3f4-27bfe03f3afb"
+        "outputId": "b5c012a7-e339-469e-ae51-3d6ce4c12d6b"
       },
       "outputs": [
         {
@@ -114,13 +114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 30,
       "metadata": {
         "id": "Fj0XhwbBCw2o",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42a9f608-6de4-46df-a8f4-7b1269e9a74b"
+        "outputId": "4e19408e-303a-4e1b-aeae-e803203340ac"
       },
       "outputs": [
         {
@@ -172,13 +172,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 31,
       "metadata": {
         "id": "w79QilHXD3Mg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16764cca-4dac-418d-8767-55ee6342a42b"
+        "outputId": "9714c917-6d57-4a83-c5bd-0e69cb53a098"
       },
       "outputs": [
         {
@@ -215,13 +215,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 32,
       "metadata": {
         "id": "_z4aLqAbEET1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61b96d0a-4991-4a4c-a38c-9a0bc7561004"
+        "outputId": "6e7c5cb3-beb3-41ff-b434-a7550a3247a3"
       },
       "outputs": [
         {
@@ -254,13 +254,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 33,
       "metadata": {
         "id": "7WEmgq-DF2P1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "45580fde-aa07-4bdd-b2a5-cc9f387b8e84"
+        "outputId": "8d3b7b34-6918-43ee-d73d-5111951864c8"
       },
       "outputs": [
         {
@@ -295,13 +295,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "t0D5kdJUGjjw",
-        "outputId": "74e9f1c5-daed-4611-c918-f6847e61d35b"
+        "outputId": "1f8eec17-81f3-4574-e804-a2bca68e4fe5"
       },
       "outputs": [
         {
@@ -331,25 +331,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 35,
       "metadata": {
         "id": "3iGbmcOBhTwy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "914e4ee3-be80-4d0c-8b14-39a8d2fa95d8"
+        "outputId": "bb4d992b-f260-4420-e557-748115015a0d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['kg0569', 'nv0234', 'vm0377', 'av0659', 'fh0141', 'ja0964']\n",
-            "['bg0320', 'sa1198', 'sk1386', 'sb1357']\n",
-            "['ak0934', 'sk1390', 'sb1357', 'sm1907']\n",
-            "['ak0934', 'sb1357', 'kg0569', 'fh0141', 'sg1297']\n",
-            "['sa1198', 'jl1252', 'sb1357', 'av0659', 'hy0232']\n",
-            "['sb1357', 'jl1252', 'sm1907', 'sk1386', 'ja0964']\n"
+            "['kg0569', 'sk1458', 'sm1640', 'vm0377']\n",
+            "['sa1198', 'kg0569', 'sk1458', 'hy0232', 'pr0353', 'vb0218']\n",
+            "['av0659', 'fh0141', 'dr0609', 'sk1386', 'vm0377']\n",
+            "['ds0814', 'ja0964', 'sc1229', 'sk1458']\n",
+            "['sc1229', 'dr0609', 'ja0964', 'jl1252', 'aos0040', 'hy0232']\n",
+            "['sg1297', 'fh0141', 'vm0377', 'sm1640', 'av0659', 'aos0040']\n"
           ]
         }
       ],
@@ -379,13 +379,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 36,
       "metadata": {
         "id": "_Bry6jp0jBCu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae3b9855-8ce6-4be9-df87-49d8081767ff"
+        "outputId": "66a20e0c-9456-4425-d5b2-28498dac9b0c"
       },
       "outputs": [
         {
@@ -424,44 +424,92 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 37,
       "metadata": {
         "id": "fxNVC-wojBCu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8167a4e-1648-4577-d93e-1c9e5c792ee1"
+        "outputId": "17c7e5e6-a267-47f9-8f4c-e487b8e17842"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "52\n"
+            "1916-01-02\n",
+            "1916-01-09\n",
+            "1916-01-16\n",
+            "1916-01-23\n",
+            "1916-01-30\n",
+            "1916-02-06\n",
+            "1916-02-13\n",
+            "1916-02-20\n",
+            "1916-02-27\n",
+            "1916-03-05\n",
+            "1916-03-12\n",
+            "1916-03-19\n",
+            "1916-03-26\n",
+            "1916-04-02\n",
+            "1916-04-09\n",
+            "1916-04-16\n",
+            "1916-04-23\n",
+            "1916-04-30\n",
+            "1916-05-07\n",
+            "1916-05-14\n",
+            "1916-05-21\n",
+            "1916-05-28\n",
+            "1916-06-04\n",
+            "1916-06-11\n",
+            "1916-06-18\n",
+            "1916-06-25\n",
+            "1916-07-02\n",
+            "1916-07-09\n",
+            "1916-07-16\n",
+            "1916-07-23\n",
+            "1916-07-30\n",
+            "1916-08-06\n",
+            "1916-08-13\n",
+            "1916-08-20\n",
+            "1916-08-27\n",
+            "1916-09-03\n",
+            "1916-09-10\n",
+            "1916-09-17\n",
+            "1916-09-24\n",
+            "1916-10-01\n",
+            "1916-10-08\n",
+            "1916-10-15\n",
+            "1916-10-22\n",
+            "1916-10-29\n",
+            "1916-11-05\n",
+            "1916-11-12\n",
+            "1916-11-19\n",
+            "1916-11-26\n",
+            "1916-12-03\n",
+            "1916-12-10\n",
+            "1916-12-17\n",
+            "1916-12-24\n",
+            "1916-12-31\n"
           ]
         }
       ],
       "source": [
-        "import datetime\n",
+        "from datetime import date, timedelta\n",
         "\n",
         "\n",
-        "def returnCounts(year: datetime) -> int:\n",
-        "    firstDate = datetime.datetime(year, 1, 1)\n",
-        "    lastDate = datetime.datetime(year, 12, 31)\n",
-        "    dayCount = 0\n",
-        "    sundayCount = 0\n",
-        "    for i in range(1, (lastDate - firstDate).days + 2):\n",
-        "        if i <= (7 - (firstDate.weekday() + 1)):\n",
-        "            continue\n",
-        "        else:\n",
-        "            if dayCount % 7 == 0:\n",
-        "                sundayCount += 1\n",
-        "            dayCount += 1\n",
-        "    return sundayCount\n",
+        "def sundays(year):\n",
+        "    temp = []\n",
+        "    dt = date(year, 1, 1)\n",
+        "    dt += timedelta(days=7 - (dt.weekday()+1))\n",
+        "    while dt.year == year:\n",
+        "        temp.append(dt)\n",
+        "        dt += timedelta(days=7)\n",
+        "    return temp\n",
         "\n",
         "\n",
-        "year = 2022\n",
-        "print(returnCounts(year))"
+        "listValues = sundays(1916)\n",
+        "for value in listValues:\n",
+        "    print(value)\n"
       ]
     }
   ],
