--- a/lab_assignment_01.ipynb
+++ b/lab_assignment_01.ipynb
@@ -331,25 +331,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 39,
       "metadata": {
         "id": "3iGbmcOBhTwy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb4d992b-f260-4420-e557-748115015a0d"
+        "outputId": "a86ff129-602e-4a34-d035-b7b29e72e3b9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['kg0569', 'sk1458', 'sm1640', 'vm0377']\n",
-            "['sa1198', 'kg0569', 'sk1458', 'hy0232', 'pr0353', 'vb0218']\n",
-            "['av0659', 'fh0141', 'dr0609', 'sk1386', 'vm0377']\n",
-            "['ds0814', 'ja0964', 'sc1229', 'sk1458']\n",
-            "['sc1229', 'dr0609', 'ja0964', 'jl1252', 'aos0040', 'hy0232']\n",
-            "['sg1297', 'fh0141', 'vm0377', 'sm1640', 'av0659', 'aos0040']\n"
+            "['sk1458', 'sk1390', 'sk1313', 'aos0040']\n",
+            "['ds0814', 'sa1198', 'kg0470', 'hy0232']\n",
+            "['sk1386', 'sb1357', 'kg0569', 'ak0956', 'ak0934', 'dr0609']\n",
+            "['sg1297', 'nm0618', 'sc1229', 'ja0964', 'nv0234', 'jl1252']\n",
+            "['ms1500', 'sm1640', 'vb0218', 'av0659', 'bg0320']\n",
+            "['pr0353', 'fh0141', 'gn0108', 'vm0377', 'sm1907']\n"
           ]
         }
       ],
@@ -361,11 +361,24 @@
         "             'sm1907', 'gn0108', 'pr0353', 'dr0609', 'ms1500', 'aos0040', 'ds0814', 'av0659', 'nv0234', 'hy0232']\n",
         "count = 6\n",
         "\n",
-        "def generation(inputList: list, count: int):\n",
-        "    for i in range(count):\n",
-        "        print(sample(inputList, randint(4, 6)))\n",
         "\n",
-        "generation(inputList, count)"
+        "def generation(inputList: list, count: int):\n",
+        "    itr = 0\n",
+        "    for i in range(count):\n",
+        "        itr += 1\n",
+        "        if itr <= 2:\n",
+        "            listValues = sample(inputList, 4)\n",
+        "        elif 2 <= itr <= 4:\n",
+        "            listValues = sample(inputList, 6)\n",
+        "        else:\n",
+        "            listValues = sample(inputList, 5)\n",
+        "        print(listValues)\n",
+        "\n",
+        "        for value in listValues:\n",
+        "            inputList.remove(value)\n",
+        "\n",
+        "\n",
+        "generation(inputList, count)\n"
       ]
     },
     {
