--- a/lab_assignment_01.ipynb
+++ b/lab_assignment_01.ipynb
@@ -331,25 +331,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 67,
       "metadata": {
         "id": "3iGbmcOBhTwy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a86ff129-602e-4a34-d035-b7b29e72e3b9"
+        "outputId": "bc90f3ba-5bbf-4262-9833-1ebdf063b941"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['sk1458', 'sk1390', 'sk1313', 'aos0040']\n",
-            "['ds0814', 'sa1198', 'kg0470', 'hy0232']\n",
-            "['sk1386', 'sb1357', 'kg0569', 'ak0956', 'ak0934', 'dr0609']\n",
-            "['sg1297', 'nm0618', 'sc1229', 'ja0964', 'nv0234', 'jl1252']\n",
-            "['ms1500', 'sm1640', 'vb0218', 'av0659', 'bg0320']\n",
-            "['pr0353', 'fh0141', 'gn0108', 'vm0377', 'sm1907']\n"
+            "['sm1907', 'sm1640', 'ms1500', 'vb0218']\n",
+            "['kg0470', 'sa1198', 'dr0609', 'sc1229']\n",
+            "['ds0814', 'av0659', 'bg0320', 'fh0141', 'sk1458', 'pr0353']\n",
+            "['aos0040', 'sk1390', 'hy0232', 'kg0569', 'sk1386', 'jl1252']\n",
+            "['nm0618', 'sb1357', 'nv0234', 'gn0108', 'vm0377']\n",
+            "['sg1297', 'ja0964', 'sk1313', 'ak0956', 'ak0934']\n"
           ]
         }
       ],
@@ -392,13 +392,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 66,
       "metadata": {
         "id": "_Bry6jp0jBCu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66a20e0c-9456-4425-d5b2-28498dac9b0c"
+        "outputId": "e3d9f273-888e-4f2a-90b9-1d8888233f6b"
       },
       "outputs": [
         {
