--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -121,8 +121,8 @@
         "review_array = []\n",
         "wb.get(link)\n",
         "\n",
-        "for num in range(40): #giving range 40 to get 1000 reviews\n",
-        "  wb.find_element_by_class_name(\"ipl-load-more__button\").click() #giving class name as ipl-load-mote__button to get all pages\n",
+        "for num in range(40): #Giving range to get 1000 reviews\n",
+        "  wb.find_element_by_class_name(\"ipl-load-more__button\").click() #Clicking Load More Button\n",
         "  time.sleep(5)\n",
         "  titles = wb.find_elements(By.CLASS_NAME, \"title\")#Extracting titles from page by filtering with the class 'title'\n",
         "  reviews = wb.find_elements(By.CLASS_NAME, \"text\")#Extracting reviews from page by filtering with the class 'text'\n",
