--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -117,8 +117,8 @@
         "import time\n",
         "\n",
         "link = 'https://www.imdb.com/title/tt7286456/reviews?ref_=tt_urv'\n",
-        "title_array = [] \n",
-        "review_array = []\n",
+        "titleArray = [] \n",
+        "reviewArray = []\n",
         "wb.get(link)\n",
         "\n",
         "for num in range(40): #Giving range to get 1000 reviews\n",
@@ -128,8 +128,8 @@
         "  reviews = wb.find_elements(By.CLASS_NAME, \"text\")#Extracting reviews from page by filtering with the class 'text'\n",
         "\n",
         "for title,review in zip(titles,reviews):\n",
-        "      title_array.append(title.text)\n",
-        "      review_array.append((review.text).replace('\\n',''))\n",
+        "      titleArray.append(title.text)\n",
+        "      reviewArray.append((review.text).replace('\\n',''))\n",
         "\n",
         "result = pd.DataFrame(list(zip(title_array, review_array)), columns =['Title', 'Review'])\n",
         "\n",
