--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -131,7 +131,7 @@
         "      titleArray.append(title.text)\n",
         "      reviewArray.append((review.text).replace('\\n',''))\n",
         "\n",
-        "result = pd.DataFrame(list(zip(title_array, review_array)), columns =['Title', 'Review'])\n",
+        "result = pd.DataFrame(list(zip(titleArray, reviewArray)), columns =['Title', 'Review'])\n",
         "\n",
         "result.drop_duplicates(inplace=True) #removing NULL values from the dataframe\n",
         "result.dropNa(inplace=True) #removing duplicate records from the dataframe\n",
