--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "Because if there is a direct rating score, you can take a mean value and decide, whereas if you only have text reviews,  you'll have to give a score based on the review.\n",
         "Furthermore, while determining whether a product is good or bad, the data collected should be free of bias.\n",
-        "Also, the review we're gathering should be from a verified consumer or purchase to get better results.\n",
+       
         "\n",
         "Before I can begin analyzing this data, I need to do some data mining, such as deleting unnecessary, empty reviews, comments about other products,\n",
         "reviews written by a same person, and so on.\n",
@@ -134,7 +134,7 @@
         "result = pd.DataFrame(list(zip(titleArray, reviewArray)), columns =['Title', 'Review'])\n",
         "\n",
         "result.drop_duplicates(inplace=True) #removing NULL values from the dataframe\n",
-        "result.dropNa(inplace=True) #removing duplicate records from the dataframe\n",
+        "result.dropna(inplace=True) #removing duplicate records from the dataframe\n",
         "result.reset_index(inplace=True,drop=True) #Resetting the index values for the data frame\n",
         "\n",
         "print(\"Length of the Dataset:\",len(result))\n",
