--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -58,7 +58,7 @@
         "\n",
         "The ideal way to acquire data is to obtain copyrights of the website, and there are a variety of web scraping tools available, such as ParseHub, Scrapy, and others.\n",
         "\n",
-        "I imported 1000 reviews from imdb for the movie Joker into a Data frame using the pandas and selenium packages,\n",
+        "I imported 1000 reviews from imdb for the movie The Matrix Resurrections into a Data frame using the pandas and selenium packages,\n",
         "then eliminated duplicates and missing information to increase accuracy.\n",
         "\n",
         "The collected data can be saved in csv, excel, or txt format for analysis.\n",
@@ -116,7 +116,7 @@
         "from selenium.webdriver.common.by import By\n",
         "import time\n",
         "\n",
-        "link = 'https://www.imdb.com/title/tt7286456/reviews?ref_=tt_urv'\n",
+        "link = 'https://www.imdb.com/title/tt10838180/reviews?ref_=tt_urv'\n",
         "titleArray = [] \n",
         "reviewArray = []\n",
         "wb.get(link)\n",
