--- a/lab_assignment_03.ipynb
+++ b/lab_assignment_03.ipynb
@@ -116,7 +116,7 @@
         "from selenium.webdriver.common.by import By\n",
         "import time\n",
         "\n",
-        "link = 'https://www.imdb.com/title/tt10838180/reviews?ref_=tt_urv'\n",
+        "link = 'https://www.imdb.com/title/tt10838180/reviews?spoiler=hide&sort=reviewVolume&dir=desc&ratingFilter=0'\n",
         "titleArray = [] \n",
         "reviewArray = []\n",
         "wb.get(link)\n",
