--- a/lab_assignment_06.ipynb
+++ b/lab_assignment_06.ipynb
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 71,
       "metadata": {
         "id": "wO-mt5l3jb_2"
       },
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vsosiqVCourG",
-        "outputId": "c46f71ad-bef1-4365-9d7b-570e10829d3d"
+        "outputId": "7ea8e594-a3bf-411c-ee5b-99bf79420612"
       },
-      "execution_count": 10,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,9 +244,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xfUXbM1Po5Sy",
-        "outputId": "a113bcdb-c8be-4232-84cf-79903e4a2133"
+        "outputId": "2943ce6a-cba9-4c2c-a05a-6b5dc2033c4d"
       },
-      "execution_count": 11,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X8MwQmYim-H1",
-        "outputId": "df752371-2bb6-4850-92f1-07f812a847ad"
+        "outputId": "f85f2b71-7b99-4bef-9f06-0fdef7fea7ce"
       },
-      "execution_count": 12,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zL7aRMqCS7I",
-        "outputId": "6d164f4b-73a9-421e-e101-7e6313582f65"
+        "outputId": "a9a9003d-3b8f-4386-bdbb-10feb0fab2c5"
       },
-      "execution_count": 13,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "yBolNKLZocWc"
       },
-      "execution_count": 14,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -388,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vA-GM-yWsN_9",
-        "outputId": "c57c3a5f-7de8-4359-95dc-23587a4a5e9f"
+        "outputId": "f6c903c6-8088-4f85-b645-746f61d9cfb0"
       },
-      "execution_count": 15,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,9 +420,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7fde70bd-a7b2-49b3-8685-80b20ef606ce"
+        "outputId": "cad1abe6-5063-4ed6-a5cf-dadd8e78bdd8"
       },
-      "execution_count": 16,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,15 +449,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvNFrVVktT1Y",
-        "outputId": "654bb677-5e73-4d11-b715-7268b7ae3210"
+        "outputId": "89a67fc2-04ea-4976-8b49-b165233d97cc"
       },
-      "execution_count": 17,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "24.41571136868755\n"
+            "25.02168414434478\n"
           ]
         }
       ]
@@ -478,9 +478,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "adf47cc2-01cc-4985-a935-e9cbc674732d"
+        "outputId": "cbc92fec-640c-4c77-f9ba-31adb0a729a8"
       },
-      "execution_count": 18,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OtDMftS0vXW",
-        "outputId": "88fad531-0031-4bdc-a41f-94e6537d5d70"
+        "outputId": "d24a677a-ac03-440b-ebae-ac2a9c13694d"
       },
-      "execution_count": 19,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +533,7 @@
       "metadata": {
         "id": "pAtnepC_03Z3"
       },
-      "execution_count": 21,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "RdDLglGw07G9"
       },
-      "execution_count": 23,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -555,12 +555,12 @@
       "source": [
         "#Adding both the counts of casual and registered users to get totals\n",
         "testSet['count']=testSet['casual']+testSet['registered']\n",
-        "testSet[['datetime','count']].to_csv('my_prediction.csv',header=['datetime','count'],sep=',',index=False)"
+        "testSet[['datetime','count']].to_csv('my_prediction.csv',header=True,sep=',',index=False,encoding='utf-8')"
       ],
       "metadata": {
         "id": "p-5lvuKMHaaD"
       },
-      "execution_count": 24,
+      "execution_count": 87,
       "outputs": []
     }
   ],
