--- a/lab_assignment_06.ipynb
+++ b/lab_assignment_06.ipynb
@@ -171,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 49,
       "metadata": {
         "id": "wO-mt5l3jb_2"
       },
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vsosiqVCourG",
-        "outputId": "7ea8e594-a3bf-411c-ee5b-99bf79420612"
+        "outputId": "e91ee140-0164-4d56-d933-87e81de8ac43"
       },
-      "execution_count": 72,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,9 +244,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xfUXbM1Po5Sy",
-        "outputId": "2943ce6a-cba9-4c2c-a05a-6b5dc2033c4d"
+        "outputId": "c4984c72-0b02-43ac-e4bd-d04f5e19f74b"
       },
-      "execution_count": 73,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X8MwQmYim-H1",
-        "outputId": "f85f2b71-7b99-4bef-9f06-0fdef7fea7ce"
+        "outputId": "d8b73d64-148d-4026-cbb8-f4a4d52af99d"
       },
-      "execution_count": 74,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,9 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_zL7aRMqCS7I",
-        "outputId": "a9a9003d-3b8f-4386-bdbb-10feb0fab2c5"
+        "outputId": "82d03ef6-1863-4afa-cacd-fd62ec00e9b1"
       },
-      "execution_count": 75,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
       "metadata": {
         "id": "yBolNKLZocWc"
       },
-      "execution_count": 76,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -388,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vA-GM-yWsN_9",
-        "outputId": "f6c903c6-8088-4f85-b645-746f61d9cfb0"
+        "outputId": "1bcc1f19-c571-431c-9273-03ed447e99de"
       },
-      "execution_count": 77,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,9 +420,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cad1abe6-5063-4ed6-a5cf-dadd8e78bdd8"
+        "outputId": "45c3354e-35e2-4a1e-e695-d4c519326c85"
       },
-      "execution_count": 78,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,15 +449,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvNFrVVktT1Y",
-        "outputId": "89a67fc2-04ea-4976-8b49-b165233d97cc"
+        "outputId": "5ff51ece-2b24-4773-c4a9-a76d54698363"
       },
-      "execution_count": 79,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "25.02168414434478\n"
+            "25.451108745115814\n"
           ]
         }
       ]
@@ -478,9 +478,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cbc92fec-640c-4c77-f9ba-31adb0a729a8"
+        "outputId": "eaf8386d-0ba8-4f88-9f35-30849f239a37"
       },
-      "execution_count": 80,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-OtDMftS0vXW",
-        "outputId": "d24a677a-ac03-440b-ebae-ac2a9c13694d"
+        "outputId": "822eec2a-8397-48b9-a782-7ea962b51e2f"
       },
-      "execution_count": 81,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +533,7 @@
       "metadata": {
         "id": "pAtnepC_03Z3"
       },
-      "execution_count": 82,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
       "metadata": {
         "id": "RdDLglGw07G9"
       },
-      "execution_count": 83,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -555,13 +555,33 @@
       "source": [
         "#Adding both the counts of casual and registered users to get totals\n",
         "testSet['count']=testSet['casual']+testSet['registered']\n",
-        "testSet[['datetime','count']].to_csv('my_prediction.csv',header=True,sep=',',index=False,encoding='utf-8')"
+        "testSet[['datetime','count']].to_csv('my_prediction.csv',header=True,sep=',',index=False,encoding='utf-8')\n",
+        "print(str(\"!!!TESTING SET!!!\").center(100))\n",
+        "print(testSet.head(5).to_string())"
       ],
       "metadata": {
-        "id": "p-5lvuKMHaaD"
+        "id": "p-5lvuKMHaaD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a2bac43-7069-499e-f835-764cfefb3fa5"
       },
-      "execution_count": 87,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                         !!!TESTING SET!!!                                          \n",
+            "              datetime  season  holiday  workingday  weather  temp  atemp  humidity  windspeed  hour  casual  registered  count\n",
+            "0  2011-01-17 00:00:00       1        1           0        2  8.20  9.850        47    15.0013     0    2.81        40.0  42.81\n",
+            "1  2011-01-17 01:00:00       1        1           0        2  8.20  9.850        44    12.9980     1    2.64        40.0  42.64\n",
+            "2  2011-01-17 02:00:00       1        1           0        2  7.38  8.335        43    16.9979     2    3.74        11.0  14.74\n",
+            "3  2011-01-17 03:00:00       1        1           0        2  7.38  9.090        43    12.9980     3    1.40        17.0  18.40\n",
+            "4  2011-01-17 04:00:00       1        1           0        2  7.38  9.850        43     8.9981     4    1.52         3.0   4.52\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
